[tool.poetry]
name = "dls"
version = "0.1.0"
description = ""
authors = ["Daniel Levita <71600818+danplevs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
pyinstaller = "^5.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
